; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/rtc/extr_rtctest.c_main.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/rtc/extr_rtctest.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rtc_file = common dso_local global i8* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"usage: %s [rtcdev]\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %12 [
    i32 2, label %7
    i32 1, label %11
  ]

7:                                                ; preds = %2
  %8 = load i8**, i8*** %5, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i64 1
  %10 = load i8*, i8** %9, align 8
  store i8* %10, i8** @rtc_file, align 8
  br label %11

11:                                               ; preds = %2, %7
  br label %18

12:                                               ; preds = %2
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8**, i8*** %5, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i64 0
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %16)
  store i32 1, i32* %3, align 4
  br label %22

18:                                               ; preds = %11
  %19 = load i32, i32* %4, align 4
  %20 = load i8**, i8*** %5, align 8
  %21 = call i32 @test_harness_run(i32 %19, i8** %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %12
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @test_harness_run(i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
